--- a/airflow/docker-compose.yaml
+++ b/airflow/docker-compose.yaml
@@ -74,6 +74,12 @@ x-airflow-common:
     # WARNING: Use _PIP_ADDITIONAL_REQUIREMENTS option ONLY for a quick checks
     # for other purpose (development, test and especially production usage) build/extend Airflow image.
     _PIP_ADDITIONAL_REQUIREMENTS: ${_PIP_ADDITIONAL_REQUIREMENTS:-}
+    PG_HOST: "altschool_de" #pgdatabase
+    PG_USER: "root"
+    PG_PASSWORD: "root"
+    PG_PORT: 5432
+    PG_DATABASE: "ny_taxi"
+
   volumes:
     - ${AIRFLOW_PROJ_DIR:-.}/dags:/opt/airflow/dags
     - ${AIRFLOW_PROJ_DIR:-.}/logs:/opt/airflow/logs
