--- a/airflow/docker-compose.yaml
+++ b/airflow/docker-compose.yaml
@@ -79,8 +79,10 @@ x-airflow-common:
     AIRFLOW_CONN_GOOGLE_CLOUD_DEFAULT: 'google-cloud-platform://?extra__google_cloud_platform__key_path=/.google/credentials/google_credentials.json'
 
     # For accessing the GCP projec and GCS bucket from the AIRFLOW Docker Environment
-    GCP_PROJECT_ID: "alt-data-engr"
-    GCP_GCS_BUCKET: "dte-engr-alt"
+    GCP_PROJECT_ID: "alt-data-proj"
+    GCP_GCS_BUCKET: "dte-alt-engr"
+    GCP_BQ_DATASET: "dbt_prod"
+    ALERT_EMAIL: "abisoyeabidakun@gmail.com"
 
     PG_HOST: "altschool_de" #pgdatabase
     PG_USER: "root"
@@ -93,6 +95,7 @@ x-airflow-common:
     - ${AIRFLOW_PROJ_DIR:-.}/logs:/opt/airflow/logs
     - ${AIRFLOW_PROJ_DIR:-.}/config:/opt/airflow/config
     - ${AIRFLOW_PROJ_DIR:-.}/plugins:/opt/airflow/plugins
+    - ${AIRFLOW_PROJ_DIR:-.}/airflow.cfg:/opt/airflow/airflow.cfg
     - ~/.google/credentials/:/.google/credentials:ro
   user: "${AIRFLOW_UID:-50000}:0"
   depends_on:
